# Valhalla

./: .coveragerc  .dockerignore  .env  .env.example  .env.sandbox  .env.test  .gitignore  .pre-commit-config.yaml  30_BLOCK_SYSTEM_COMPLETE_FINAL_STATUS.md  4_LEVERS_COMPLETE.md  AI_GUIDE.md  ALEMBIC_MULTIPLE_HEADS_FIX.md  API_ENDPOINTS_LIVE.md  ARCHITECTURE_DIAGRAMS.md  AUTH_SETUP_COMPLETE.txt  AUTO_BUILDER_GUIDE.md  BATCH_1_DEPLOYMENT_CHECKLIST.md  BATCH_1_FINAL_MANIFEST.md  BATCH_1_INDEX.md  BATCH_1_README.md  BATCH_1_SANDBOX_STABILITY_GUIDE.md  BATCH_1_SUMMARY.md  BATCH_2_DEPLOYMENT_CHECKLIST.md  BATCH_2_IMPLEMENTATION_GUIDE.md  BATCH_2_INDEX.md  BATCH_2_README.md  BATCH_2_SUMMARY.md  BATCH_3_DEPLOYMENT_CHECKLIST.md  BATCH_3_IMPLEMENTATION_GUIDE.md  BATCH_3_INDEX.md  BATCH_3_README.md  BATCH_3_SUMMARY.md  BUILDER_API_EXAMPLES.md  CAPITAL_METRICS_DEPLOYMENT.md  COMPLETE_SYSTEM_SUMMARY.md  COMPLETION_SUMMARY.txt  CSV_INGESTION_FILE_INDEX.md  CSV_INGESTION_GUIDE.md  CSV_INGESTION_IMPLEMENTATION.md  CSV_INGESTION_UPDATE_COMPLETE.md  (+1071 more)
.converge_reports/: duplicates.txt  render_sanity.txt
advisory/: BUSINESS_GPS.md  CHALLENGE_REPORT.md  DECISION_LOG.md
alembic/: env.py
app/: __init__.py  main.py
backend/: Dockerfile  admin_ui.py  db.py  git_ops.py  heimdall_service.py  heimdall_validate.py  launch.py  main.py  notify.py  requirements.txt  run_worker.py  worker.py
config/: caps_limits.json
configs/: sandbox_integrated.json
data/: capital_usage.json  cone_state.json  thresholds.json
db/: base.py  legacy_models.py
engines/: ENGINE_REGISTRY.md
scripts/: seed.sh  (+2 more)
(+3388 files in other folders)
