[project]
name = "valhalla"
version = "0.1.0"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","SIM","W","Q"]
ignore = []
exclude = [".venv","venv","build","dist",".mypy_cache",".ruff_cache"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = "(venv|.venv|build|dist)"
